add avro schema regsitry and get output from mysql db

--- a/kafka/config/server.properties
+++ b/kafka/config/server.properties
@@ -31,6 +31,10 @@ port=9092
 #     listeners = PLAINTEXT://your.host.name:9092
 #listeners=PLAINTEXT://:9092
 
+listeners=SSL://:9092
+advertised.listeners=SSL://:9092
+inter.broker.listener.name=SSL
+
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
@@ -52,7 +56,8 @@ socket.send.buffer.bytes=102400
 socket.receive.buffer.bytes=102400
 
 # The maximum size of a request that the socket server will accept (protection against OOM)
-socket.request.max.bytes=104857600
+socket.request.max.bytes=1447375956
+#104857600
 
 
 ############################# Log Basics #############################
