--- a/kafka/config/server-2.properties
+++ b/kafka/config/server-2.properties
@@ -112,7 +112,7 @@ log.segment.bytes=1073741824
 
 # The interval at which log segments are checked to see if they can be deleted according
 # to the retention policies
-log.retention.check.interval.ms=300000
+log.retention.check.interval.ms=30000000
 
 ############################# Zookeeper #############################
 
@@ -124,7 +124,7 @@ log.retention.check.interval.ms=300000
 zookeeper.connect=localhost:2181
 
 # Timeout in ms for connecting to zookeeper
-zookeeper.connection.timeout.ms=6000
+zookeeper.connection.timeout.ms=600000
 
 
 ############################# Group Coordinator Settings #############################
