--- a/kafka/config/server.properties
+++ b/kafka/config/server.properties
@@ -18,9 +18,9 @@
 ############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
-broker.id=0
+# broker.id=0
 port=9092
-
+broker.id.generation.enable=true 
 ############################# Socket Server Settings #############################
 
 # The address the socket server listens on. It will get the value returned from 
@@ -34,7 +34,7 @@ port=9092
 listeners=SSL://:9092
 advertised.listeners=SSL://:9092
 inter.broker.listener.name=SSL
-
+advertised.listeners=PLAINTEXT://localhost:9092
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
@@ -68,7 +68,7 @@ log.dirs=/tmp/kafka-logs
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
 # the brokers.
-num.partitions=1
+num.partitions=10
 
 # The number of threads per data directory to be used for log recovery at startup and flushing at shutdown.
 # This value is recommended to be increased for installations with data dirs located in RAID array.
@@ -117,7 +117,7 @@ log.segment.bytes=1073741824
 
 # The interval at which log segments are checked to see if they can be deleted according
 # to the retention policies
-log.retention.check.interval.ms=300000
+log.retention.check.interval.ms=30000000
 
 ############################# Zookeeper #############################
 
@@ -129,7 +129,13 @@ log.retention.check.interval.ms=300000
 zookeeper.connect=localhost:2181
 
 # Timeout in ms for connecting to zookeeper
-zookeeper.connection.timeout.ms=6000
+zookeeper.connection.timeout.ms=600000
+
+metric.reporters=io.confluent.metrics.reporter.ConfluentMetricsReporter
+confluent.metrics.reporter.bootstrap.servers=localhost:9092
+confluent.metrics.reporter.topic.replicas=1
+confluent.support.metrics.enable=true
+confluent.support.customer.id=anonymous
 
 
 ############################# Group Coordinator Settings #############################
@@ -140,3 +146,18 @@ zookeeper.connection.timeout.ms=6000
 # We override this to 0 here as it makes for a better out-of-the-box experience for development and testing.
 # However, in production environments the default value of 3 seconds is more suitable as this will help to avoid unnecessary, and potentially expensive, rebalances during application startup.
 group.initial.rebalance.delay.ms=0
+
+confluent.license.topic.replication.factor=1
+
+# Uncomment the following lines and specify values where required to enable RBAC
+# Enable RBAC provider 
+#confluent.authorizer.access.rule.providers=ACL,RBAC
+# Bootstrap servers for RBAC metadata. Must be provided if this broker is not in the metadata cluster
+#confluent.metadata.bootstrap.servers=PLAINTEXT://127.0.0.1:9092
+# Replication factor for the metadata topic used for authorization. Default is 3.
+confluent.metadata.topic.replication.factor=1
+
+# Listeners for metadata server
+confluent.metadata.server.listeners=http://0.0.0.0:8090
+# Advertised listeners for metadata server
+confluent.metadata.server.advertised.listeners=http://127.0.0.1:8090
