--- a/kafka/config/zookeeper.properties
+++ b/kafka/config/zookeeper.properties
@@ -13,8 +13,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # the directory where the snapshot is stored.
-dataDir=/tmp/zookeeper
-# the port at which the clients will connect
 clientPort=2181
 # disable the per-ip limit on the number of connections since this is a non-production config
-maxClientCnxns=0
+maxClientCnxns=10
+
+#add this for Kafka REST 
+tickTime=2000
+dataDir=/var/lib/zookeeper
+# dataDir=/usr/local/var/run/zookeeper/
+
+# clientPort=2181
+initLimit=10
+syncLimit=2
+#zookeeperIp/hostname 
+server.1=localhost:2888:3888
+server.2=localhost:2888:3888
+server.3=localhost:2888:3888
+autopurge.snapRetainCount=3
+autopurge.purgeInterval=24
